# syncTimeICOM

./: LICENSE.txt  README_ja.md
.github/workflows/: build-linux.yml  build-macos.yml  codeql-analysis.yml  release.yml
src/: Makefile.in  config.h.in  configure  configure.ac  syncTimeICOM.c  ttyserial.c  ttyserial.h
